--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,10 @@
 	box-sizing: border-box;
 }
 
+html {
+	scroll-behavior: smooth;
+}
+
 ul[class],
 ol[class] {
 	padding: 0;
@@ -77,7 +81,6 @@ body {
 	font-family: var(--body-font);
 	font-size: var(--normal-font-size);
 	color: var(--text-color);
-	scroll-behavior: smooth;
 	text-rendering: optimizeSpeed;
 	line-height: var(--normal-line-height);
 }
@@ -147,9 +150,31 @@ select {
 	margin: 0 auto;
 	padding: 0 36px;
 	position: sticky;
+	top: 0;
+	z-index: 100;
+	background-color: var(--white);
 }
 
 .header__logo-link {
+}
+
+@media screen and (max-width: 668px) {
+	.header__nav {
+		flex-direction: column;
+		position: fixed;
+		top: -100%;
+		left: 0;
+		right: 0;
+		width: 90%;
+		margin: 0 auto;
+		padding: 2.5em 0 0;
+		text-align: center;
+		background-color: var(--white);
+		transition: 0.4s;
+		box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
+		border-radius: 0.5rem;
+		z-index: 100;
+	}
 }
 
 .header__nav {
@@ -178,6 +203,17 @@ select {
 
 .header__btn {
 	margin-left: 0.25rem;
+}
+
+.header__nav-toggle {
+	display: none;
+	height: 1.5rem;
+	width: 1.5rem;
+}
+
+/* Show Menu */
+.show-menu {
+	top: calc(var(--header-height) + 1rem);
 }
 
 /* BUTTONS */
@@ -312,7 +348,7 @@ select {
 .data__eye-icon {
 	top: 0;
 	right: 0;
-	transform: translate(26%, -87%);
+	transform: translate(-18%, -87%);
 }
 
 /* CONICAL-EYE */
@@ -328,7 +364,7 @@ select {
 
 .insights__inner {
 	grid-template-columns: 1fr;
-	margin-bottom: .75rem;
+	margin-bottom: 0.75rem;
 	padding-top: 6rem;
 	padding-bottom: 10rem;
 }
@@ -378,7 +414,7 @@ select {
 	line-height: 1.42;
 }
 
-.title--min {
+.insights__card-title--min {
 	margin-bottom: 0.25rem;
 	font-size: 19px;
 	line-height: var(--larger-line-height);
@@ -427,7 +463,7 @@ select {
 .insights__eye-icon {
 	bottom: 0;
 	left: 0;
-	transform: translate(-37%, 25%);
+	transform: translate(-18%, 17%);
 }
 
 /* ADVANTAGES */
@@ -437,7 +473,7 @@ select {
 
 .advantages__inner {
 	grid-template-columns: 1fr;
-	margin-bottom: .75rem;
+	margin-bottom: 0.75rem;
 	padding-top: 6rem;
 	padding-bottom: 6rem;
 }
@@ -524,7 +560,7 @@ select {
 .about__eye-icon {
 	top: 0;
 	right: 0;
-	transform: translate(5%, -59%);
+	transform: translate(-60%, -59%);
 }
 
 /* FOOTER */
@@ -549,7 +585,7 @@ select {
 	line-height: var(--large-line-height);
 	color: var(--text-light);
 	border-bottom: 1px solid transparent;
-	transition: .3s;
+	transition: 0.3s;
 }
 
 .footer__link:hover {
@@ -622,5 +658,300 @@ select {
 }
 
 .subscribe__form {
+	max-width: 430px;
 	margin-bottom: 4.93rem;
+}
+
+/* MEDIA QUERIES */
+@media screen and (max-width: 1168px) {
+	.section,
+	.footer {
+		padding-left: 1rem;
+		padding-right: 1rem;
+	}
+
+	.advantages__content {
+		grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	}
+}
+
+@media screen and (max-width: 968px) {
+	.subscribe {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		padding-right: 4rem;
+		background-image: none;
+	}
+
+	.subscribe__title,
+	.subscribe__text {
+		text-align: center;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	:root {
+		--h1-font-size: 2.5rem;
+		--h2-font-size: 1.66rem;
+		--h3-font-size: 1.458rem;
+
+		--small-font-size: 0.7rem;
+		--normal-font-size: 0.83rem;
+		--large-font-size: 0.93rem;
+		--xlarge-font-size: 1.04rem;
+	}
+
+	.home__inner {
+		grid-template-columns: 1fr;
+		height: initial;
+		justify-items: center;
+	}
+
+	.home__content {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		margin-bottom: var(--mb-3);
+	}
+
+	.home__heading {
+		text-align: center;
+	}
+
+	.home__description {
+		width: initial;
+		text-align: center;
+	}
+
+	.home__img {
+		max-width: 18rem;
+		margin-bottom: -1.5rem;
+	}
+
+	.home__img-item {
+		position: initial;
+	}
+
+	.data__inner,
+	.insights__inner {
+		padding-top: 4rem;
+	}
+
+	.data__title {
+		font-size: 29px;
+		max-width: 39rem;
+		width: 100%;
+	}
+
+	.data__subtitle {
+		max-width: 44rem;
+		width: 100%;
+	}
+
+	.insights__inner {
+		padding-bottom: 5rem;
+	}
+
+	.insights__subtitle {
+		max-width: 46rem;
+		width: 100%;
+	}
+
+	.insights__cards {
+		margin-top: 2.5rem;
+	}
+
+	.insights__card {
+		padding-left: 1.5rem;
+	}
+
+	.insights__card-1 {
+		padding-top: 3rem;
+	}
+
+	.insights__card-2 {
+		margin-top: 1.5rem;
+	}
+
+	.insights__card-3,
+	.insights__card-4 {
+		padding-top: 2.5rem;
+	}
+
+	.insights__card-4 {
+		margin-top: -121px;
+	}
+
+	.insights__card-title--min {
+		font-size: 16px;
+	}
+
+	.card-2-img {
+		margin-bottom: 2.31rem;
+	}
+
+	.card-1-img,
+	.card-3-img,
+	.card-4-img {
+		margin-top: 2.5rem;
+	}
+
+	.insights__card-desc {
+		padding-right: 2rem;
+	}
+
+	.advantages__inner {
+		padding-top: 4rem;
+		padding-bottom: 4rem;
+	}
+
+	.advantages__content {
+		grid-gap: 2.125rem;
+		margin-top: 2.5rem;
+	}
+
+	.advantages__item {
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.advantages__item-icon {
+		margin-bottom: 23px;
+	}
+
+	.advantages__item-title {
+		text-align: center;
+	}
+
+	.advantages__item-desc {
+		text-align: center;
+	}
+
+	.about__inner {
+		padding-top: 3.875rem;
+		padding-left: 0.8rem;
+		padding-bottom: 4rem;
+	}
+
+	.about__title {
+		font-size: 33px;
+	}
+
+	.subscribe__title {
+		font-size: 19px;
+	}
+
+	.footer__link {
+		font-size: 13px;
+	}
+
+	.footer__copy {
+		margin-top: 4.68rem;
+	}
+
+	.footer__separator {
+		margin-top: 2.75rem;
+	}
+
+	.footer__slogan {
+		margin-top: var(--mb-3);
+		margin-bottom: var(--mb-3);
+	}
+}
+
+@media screen and (max-width: 767px) {
+	.insights__cards {
+		grid-template-columns: minmax(300px, 334px);
+		justify-content: center;
+	}
+
+	.insights__card-2 {
+		margin-top: initial;
+	}
+
+	.insights__card-4 {
+		margin-top: initial;
+	}
+}
+
+@media screen and (max-width: 668px) {
+	.header__nav-list {
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.header__nav-item {
+		margin-right: initial;
+		margin-bottom: var(--mb-3);
+	}
+
+	.header__btn {
+		margin-left: initial;
+		margin-bottom: var(--mb-4);
+	}
+
+	.header__nav-toggle {
+		display: block;
+	}
+}
+
+@media screen and (max-width: 668px) {
+	.conical-eye {
+		display: none;
+	}
+
+	.subscribe {
+		padding-right: 2rem;
+		padding-left: 2rem;
+	}
+}
+
+@media screen and (max-width: 568px) {
+	.footer__slogan {
+		flex-direction: column;
+	}
+
+	.footer__slogan-text {
+		margin-bottom: var(--mb-2);
+	}
+}
+
+@media screen and (max-width: 468px) {
+	.subscribe {
+		padding-right: 1rem;
+		padding-left: 1rem;
+	}
+}
+
+@media screen and (max-width: 368px) {
+	.section {
+		margin-right: 0.25rem;
+		margin-left: 0.25rem;
+		padding-left: var(--mb-1);
+		padding-right: var(--mb-1);
+	}
+
+	.home__description {
+		width: 94%;
+	}
+
+	.form__text {
+		padding-left: 0.25rem;
+	}
+
+	.insights__cards {
+		padding-left: initial;
+		padding-right: initial;
+	}
+	
+	.footer {
+		padding-left: 0;
+		padding-right: 0;
+	}
+
+	.subscribe {
+		padding-right: .25rem;
+		padding-left: .25rem;
+	}
 }
